on product click, go to the top of the modal. and fix carusel image sizes on mobile

--- a/static_cdn/assets/css/style.scss
+++ b/static_cdn/assets/css/style.scss
@@ -1103,6 +1103,10 @@ a:hover {
     //height: 100%;            /* recommended */
     height: 250px;
     white-space: normal;     /* recommended */
+
+    @media only screen and (max-width: 600px) {
+      width: 80%;
+    }
     
     img {
       height: 250px;
